@@ -1036,6 +1036,11 @@
           <ref table="Interface" db="Open_vSwitch"/> table.
         </column>
 
+        <column name="options" key="qos_min_rate">
+          If set, indicates the minimum guaranteed rate available for data sent
+          from this interface, in bit/s.
+        </column>
+
         <column name="options" key="qos_max_rate">
           If set, indicates the maximum rate for data sent from this interface,
           in bit/s. The traffic will be shaped according to this limit.
